--- a/gift/true.html
+++ b/gift/true.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="container">
-        <h3 class="typing" id="greeting"> كل عام و انتي بخير يا احلى قرويه<span id="personName"></span></h3>
+        <h3 class="typing" id="greeting"> كل عام و انتي بخير يا احلى سوسه<span id="personName"></span></h3>
         <p class="typing" style="animation-delay: 2s;">اسأل الله ان يتقبل منكم صيامكم</p>
            <p class="typing" style="animation-delay: 3s;">و دعائكم و صالح اعمالكم</p>
         <p class="typing" style="animation-delay: 4s;"> كل عام وأنتي مبسووطه </p>
