--- a/gift/index.html
+++ b/gift/index.html
@@ -41,10 +41,9 @@
 <body>
     <div class="container">
         <h1>أدخل اسم الشخص</h1>
-        <form action="true.php" method="post">
-            <input type="text" name="name" id="name" placeholder="أدخل الاسم هنا" required>
-            <input type="submit" value="أرسل">
-        </form>
+        <form id="nameForm" action="true.php" method="post">
+  <input type="text" name="name" id="nameInput" placeholder="أدخل الاسم هنا" required>
+</form>
     </div>
 
     <script>
