--- a/gift/index.html
+++ b/gift/index.html
@@ -40,10 +40,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>أدخل اسم الشخص</h1>
-        <form id="nameForm" action="true.php" method="post">
-  <input type="text" name="name" id="nameInput" placeholder="أدخل الاسم هنا" required>
-</form>
+        <h1>أدخل اسمك</h1>
+        <form action="true.php" method="post">
+            <input type="text" name="name" id="name" placeholder="أدخل الاسم هنا" required>
+            <input type="submit" value="أرسل">
+        </form>
     </div>
 
     <script>
